[package]
name = "bevy_marching_cube"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"
# bevy = { path = "../bevy" }
bevy_mod_picking = "0.6"
noise = "0.7.0"
bevy-inspector-egui = "0.10.0"

[patch."https://github.com/bevyengine/bevy"]
# bevy = { path = "../bevy" }
